# OwnAudioSharp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Directory.Build.props  GEMINI.md  Ownaudio.Desktop.slnf  Ownaudio.Mobile.slnf  Ownaudio.sln  README.md  SYNC_ARCHITECTURE_UPGRADE.md  THREAD_BLOCKING_ANALYSIS.md  Thumbs.db  index.html  package-lock.json
.github/workflows/: build-ml.yml  build-native-midi.yml  build-native.yml
Examples/AudioEngine/: AudioEngine.csproj  Program.cs
Examples/ChordDetect/: Program.cs
Examples/FXUsage/: FXUsage.csproj  Program.cs
Examples/Matching/: Matching.csproj  Program.cs
Examples/Microphone/: Microphone.csproj  Program.cs
Examples/Multitrackplayer/: Program.cs
Examples/PitchTempo/: Program.cs
Examples/RealTimeData/: Program.cs
Examples/Simpleplayer/: Program.cs
Logger/: Logger.cs  Logger.csproj
OwnAudio.Packaging/OwnAudioSharp/: OwnAudioSharp.csproj
OwnAudio.Packaging/OwnAudioSharp.Basic/: OwnAudioSharp.Basic.csproj
OwnAudio.Packaging/OwnAudioSharp.Mobile/: OwnAudioSharp.Mobile.csproj
OwnAudio/ML/: AudioAnalyzer.cs  ChordDetector.cs  MdxSeparator.cs  ModelManager.cs  NotesPredictor.cs  OwnAudio.ML.csproj  OwnAudioMlException.cs  README.md  VocalSeparator.cs
OwnAudio/Midi/: OwnAudio.Midi.csproj  README.md
OwnAudio/Midi/rust-midi/ownaudio-midi-core/: Cargo.toml
OwnAudio/Midi/rust-midi/ownaudio-midi-core/src/: clock.rs  error.rs  lib.rs  message.rs  port.rs  port_android.rs
OwnAudio/Midi/rust-midi/ownaudio-midi-core/src/file/: mod.rs  parser.rs  writer.rs
OwnAudio/Midi/rust-midi/ownaudio-midi-ffi/: Cargo.toml  build.rs  cbindgen.toml
OwnAudio/Midi/rust-midi/ownaudio-midi-ffi/include/: ownaudio_midi_ffi.h
OwnAudio/Midi/rust-midi/ownaudio-midi-ffi/src/: error_code.rs  ffi_clock.rs  ffi_file.rs  ffi_port.rs  handles.rs  lib.rs  types.rs
OwnAudio/Midi/rust-midi/ownaudio-midi-ffi/tests/: ffi_smoke.rs  layout.rs
OwnAudio/OwnaudioSource/: OwnaudioNET.Mobile.csproj  OwnaudioNET.csproj  OwnaudioNet.cs  README.Desktop.md  README.md
OwnAudio/Source/: InternalsVisibleTo.cs  MASTER_CLOCK_IMPLEMENTATION_PLAN.md  OwnaudioNET.Basic.csproj  OwnaudioNET.Mobile.csproj  OwnaudioNET.csproj  OwnaudioNet.NetworkSync.cs  OwnaudioNet.cs  README.Basic.md  README.Desktop.md  README.Mobile.md  build-nuget.bat  build-nuget.sh
OwnAudioEngine/OwnAudioRust/: OwnAudioRust.csproj
OwnAudioEngine/Ownaudio.Android/: AAudioDeviceEnumerator.cs  AAudioEngine.cs  Ownaudio.Android.csproj  README.md
OwnAudioEngine/Ownaudio.Core/: AudioConfig.cs  AudioDecoderExtensions.cs  AudioDecoderFactory.cs  AudioDecoderResult.cs  AudioDeviceEventArgs.cs  AudioDeviceInfo.cs  AudioEngineAsyncExtensions.cs  AudioEngineFactory.cs  AudioFormat.cs  AudioFrame.cs  AudioStreamInfo.cs  EngineHostType.cs  EngineStatus.cs  FFmpegConfig.cs  IAudioDecoder.cs  (+4 more)
OwnAudioEngineRust/: Cargo.toml
OwnAudioEngineRust/ownaudio-core/: Cargo.toml  README.md
OwnAudioEngineRust/ownaudio-core/src/: config.rs  denormal.rs  device.rs  engine.rs  error.rs  format.rs  lib.rs  mixer.rs  resampler.rs  ringbuffer.rs  rt_guard.rs  smoothing.rs  stream.rs  stream_error.rs
OwnAudioEngineRust/ownaudio-core/src/decoder/: mod.rs  stream_info.rs  streaming_track.rs  test_support.rs  tests.rs
OwnAudioEngineRust/ownaudio-core/src/decoder/backend/: mod.rs  resample.rs  symphonia_backend.rs
OwnAudioEngineRust/ownaudio-core/src/effects/: autogain.rs  chorus.rs  compressor.rs  delay.rs  distortion.rs  dynamic_amp.rs  enhancer.rs  equalizer.rs  equalizer30.rs  flanger.rs  gate.rs  limiter.rs  mod.rs  overdrive.rs  phaser.rs  pitch_shift.rs  reverb.rs  rotary.rs  vst.rs
OwnAudioEngineRust/ownaudio-core/src/effects/smartmaster/: crossover.rs  mod.rs  phase_alignment.rs  subharmonic.rs
OwnAudioEngineRust/ownaudio-core/src/multitrack/: clock.rs  command.rs  file_source.rs  memory_source.rs  mod.rs  stretch.rs  track.rs
OwnAudioEngineRust/ownaudio-core/tests/: effect_alloc_free.rs  integration_smoke.rs
OwnAudioEngineRust/ownaudio-cpal/: Cargo.toml
OwnAudioEngineRust/ownaudio-cpal/asio-sys/: Cargo.toml  build.rs
OwnAudioEngineRust/ownaudio-cpal/asio-sys/src/bindings/: mod.rs
OwnAudioEngineRust/ownaudio-cpal/src/host/asio/: mod.rs  stream.rs
OwnAudioEngineRust/ownaudio-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
OwnAudioEngineRust/ownaudio-ffi/include/: ownaudio_ffi.h
OwnAudioEngineRust/ownaudio-ffi/src/: callback.rs  error_code.rs  ffi_abi.rs  ffi_bpm.rs  ffi_config.rs  ffi_decoder.rs  ffi_device.rs  ffi_effects.rs  ffi_file_source.rs  ffi_input_source.rs  ffi_memory_source.rs  ffi_source.rs  ffi_stream.rs  ffi_track.rs  handles.rs  host_api.rs  lib.rs
OwnAudioEngineRust/ownaudio-ffi/tests/: ffi_smoke.rs  layout.rs
OwnAudioEngineRust/ownaudio-soundtouch/: Cargo.toml
OwnAudioEngineRust/ownaudio-soundtouch/src/: bpm_detect.rs  error.rs  fifo_buffer.rs  interpolate.rs  lib.rs  processor.rs  rate_transposer.rs  time_stretch.rs
OwnAudioEngineRust/ownaudio-soundtouch/src/filter/: anti_alias.rs  fir_filter.rs  mod.rs
OwnAudioEngineRust/ownaudio-soundtouch/tests/: allocation.rs  processor.rs
OwnaudioExample/: OwnaAvalonia.csproj
OwnaudioSrc/: AudioDevice.cs  Ownaudio.csproj  OwnaudioLib.Miniaudio.cs  OwnaudioLib.Portaudio.cs  OwnaudioLib.Properties.cs  OwnaudioLib.cs  OwnaudioLib.ffmpeg.cs  README.md
Ownaudiotest/: MSTestSettings.cs  OwnAudioConstantsTests.cs  OwnAudioDeviceTests.cs  OwnAudioInitializationTests.cs  OwnAudioPlatformPathTests.cs  OwnAudioPropertiesTests.cs  OwnAudioThreadSafetyTests.cs  Ownaudiotest.csproj
assets/: docs.css  docs.js
documents/: api-advanced.html  api-core.html  api-effects.html  api-midi.html  api-mixer.html  api-net.html  api-network.html  api-reference.html  api-sources.html  api-sync.html  architecture.html  chorddetect.html  docs.css  docs.js  effects.html  examples.html  matchering.html  networksync.html  quickstart.html  vocalremover.html
native/ownaudio_ml/: CMakeLists.txt  ownaudio_ml.h
native/ownaudio_ml/src/: audio_analyzer.cpp  basic_pitch.cpp  chord_detector.cpp  mdx_separator.cpp  ownaudio_ml.cpp  vocal_separator.cpp
(+958 files in other folders)
