[package]
name = "ownaudio-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform audio I/O core for OwnAudioSharp (Cpal-based)"
license = "MIT"

[lib]
# cdylib csak a 3. lépésben (FFI réteg) kerül hozzá
crate-type = ["lib"]

[dependencies]
cpal = "0.18"
thiserror = "1.0"
rtrb = "0.3"
rubato = { version = "0.15", features = ["fft_resampler"] }
log = "0.4"

# Pure-Rust streaming audio decoder. Always compiled in and dependency-free at
# runtime, so the native library loads on every platform without FFmpeg.
# FFmpeg-backed decoding is handled separately by the managed C# layer, which
# loads the system FFmpeg libraries dynamically only when they are present.
symphonia = { version = "0.5", features = [
    "mp3", "flac", "wav", "pcm", "adpcm", "ogg", "vorbis", "aac", "isomp4", "aiff",
] }

[dev-dependencies]
# az integrációs tesztekben ~1s sleep szükséges
