[package]
name = "asio-sys"
version = "0.3.0"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
description = "Low-level interface and binding generation for the steinberg ASIO SDK."
repository = "https://github.com/RustAudio/cpal/"
documentation = "https://docs.rs/asio-sys"
license = "Apache-2.0"
keywords = ["audio", "sound", "asio", "steinberg"]
edition = "2021"
rust-version = "1.82"

[features]
default = []

# Build against the real Steinberg ASIO SDK.
#
# Without this feature the build script emits stub bindings: the crate still
# compiles, but it cannot talk to a driver. `cpal/asio` turns it on.
#
# This exists because cargo auto-promotes path dependencies inside a workspace
# directory to workspace members, and members are built by a plain `cargo build`
# even when nothing depends on them. Requiring the SDK unconditionally would
# therefore make every build of the enclosing workspace need the SDK (and the
# network to fetch it), on every platform.
sdk = []

[build-dependencies]
bindgen = "0.72"
walkdir = "2"
cc = "1.2"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
