[package]
name = "ownaudio-midi-core"
version = "1.0.0"
edition = "2021"
description = "Cross-platform MIDI I/O, Standard MIDI File handling and timing core for OwnAudioSharp"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
thiserror = "1"

# midir has no Android backend, so it is only a dependency on the platforms
# where the hardware/virtual port module is compiled. On Android the port
# module falls back to a stub (see src/port_android.rs); file and clock
# functionality remain fully available.
[target.'cfg(not(target_os = "android"))'.dependencies]
midir = "0.10"
